# projeto_maepata

./: README.md  pyproject.toml
app/pipeline/: transform.py
