[tool.poetry]
name = "projeto_maepata"
version = "0.1.0"
description = "Projeto para conexão do python com o motherduck."
authors = ["Pedro Ivo <ivopedrobr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
duckdb = "v0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
